update: integration tests